[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyAntsLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = 24.0
margin_right = 163.0
margin_bottom = 40.0
text = "Enemy Ants: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfectedAntsLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = 43.0
margin_right = 163.0
margin_bottom = 64.0
text = "Infected Ants: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Game Over!"
